# logue-boy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CPPLINT.cfg  LICENSE  README.md  meson.build
.github/workflows/: ci.yml
libs/logue-sdk-stub/platform/minilogue-xd/inc/: osc_api.h  userosc.h
libs/logue-sdk-stub/platform/minilogue-xd/inc/utils/: float_math.h
osc/noise/: test.mk
osc/noise/platform/minilogue-xd/: manifest.json  project.mk
osc/noise/platform/minilogue-xd/ld/: userosc.ld
osc/noise/platform/minilogue-xd/tpl/: _unit.c
osc/noise/platform/nutekt-digital/: Makefile  manifest.json  project.mk
osc/noise/platform/prologue/: CPPLINT.cfg  manifest.json
osc/noise/src/: noise.cpp  noise.hpp
osc/noise/test/: noise_test.cpp
osc/pokegold/: test.mk
osc/pokegold/platform/minilogue-xd/: manifest.json  project.mk
osc/pokegold/platform/minilogue-xd/ld/: rules.ld
osc/pokegold/platform/nutekt-digital/: manifest.json  project.mk
osc/pokegold/platform/prologue/: Makefile  manifest.json
osc/pokegold/src/: pokegold.cpp  pokegold.hpp
osc/pokegold/test/: pokegold_test.cpp
osc/pulse/: test.mk
osc/pulse/platform/minilogue-xd/: Makefile  manifest.json
osc/pulse/platform/nutekt-digital/: manifest.json  project.mk
osc/pulse/platform/prologue/: manifest.json  project.mk
osc/pulse/src/: pulse.cpp  pulse.hpp
osc/pulse/test/: pulse_test.cpp
subprojects/: gtest.wrap
tools/: build.sh  format.sh  lint.sh  test.sh
